Fix inconsistent spacing

--- a/web/styles.css
+++ b/web/styles.css
@@ -161,11 +161,6 @@ input:checked~.slider::before {
     }
 }
 
-.input-wrapper {
-    position: relative;
-    margin-bottom: 12px;
-}
-
 .math-delimiter {
     font-family: "Courier New", monospace;
     font-size: 1.2rem;
@@ -188,26 +183,34 @@ input:checked~.slider::before {
     border-radius: 0 0 4px 4px;
 }
 
-.input-wrapper.math-mode-disabled .math-delimiter {
-    opacity: 0;
-    visibility: hidden;
-    height: 0;
-    padding: 0;
-    border: none;
-    overflow: hidden;
-}
+#inputWrapper {
+    &.math-mode-disabled {
+        .math-delimiter {
+            opacity: 0;
+            visibility: hidden;
+            height: 0;
+            padding: 0;
+            border: none;
+            overflow: hidden;
+        }
 
-.input-wrapper.math-mode-disabled textarea {
-    border-radius: 4px;
-}
+        textarea {
+            border-radius: 4px;
+        }
+    }
 
-.input-wrapper:not(.math-mode-disabled) textarea {
-    border-radius: 0;
-    border-top: none;
-    border-bottom: none;
+    &:not(.math-mode-disabled) {
+        textarea {
+            border-radius: 0;
+            border-top: none;
+            border-bottom: none;
+        }
+    }
 }
 
 textarea {
+    /* https://stackoverflow.com/a/3454002 */
+    display: block;
     width: 100%;
     height: 120px;
     box-sizing: border-box;
